# api/src/types.rs
@@ -1,4 +1,4 @@
-use chrono::{DateTime, Utc};
+use chrono::{DateTime, NaiveTime, Utc};
 use serde::{Deserialize, Serialize};
 use std::collections::HashSet;
 
@@ -6,38 +6,13 @@ pub mod app_state;
 pub mod representation;
 pub mod use_cases;
 
-#[derive(Debug, Clone, PartialEq, Eq)]
-pub struct UtcTime {
-    hour: u8,
-    minute: u8,
-    second: u8,
-}
-
-impl UtcTime {
-    fn _new(hour: u8, minute: u8, second: u8) -> Result<Self, &'static str> {
-        if (0..=23).contains(&hour) && (0..=59).contains(&minute) && (0..=59).contains(&second) {
-            Ok(Self {
-                hour,
-                minute,
-                second,
-            })
-        } else {
-            Err("Invalid time format: must have 0 <= hour <= 23, 0 <= minute <= 59 and 0 <= second <= 59")
-        }
-    }
-
-    fn _to_string(&self) -> String {
-        format!("{:02}:{:02}:{:02}Z", self.hour, self.minute, self.second)
-    }
-}
-
-#[derive(Debug, Clone, PartialEq, Eq)]
+#[derive(Debug, Clone, PartialEq, Eq, Hash, Serialize, Deserialize)]
 pub struct ActiveHours {
-    pub start: UtcTime,
-    pub end: UtcTime,
+    pub start: NaiveTime,
+    pub end: NaiveTime,
 }
 
-#[derive(Debug, Clone, PartialEq, Eq)]
+#[derive(Debug, Clone, PartialEq, Eq, Hash)]
 pub struct ActiveHoursPerWeek {
     pub monday: Option<ActiveHours>,
     pub tuesday: Option<ActiveHours>,
@@ -46,6 +21,47 @@ pub struct ActiveHoursPerWeek {
     pub friday: Option<ActiveHours>,
     pub saturday: Option<ActiveHours>,
     pub sunday: Option<ActiveHours>,
+}
+
+impl ActiveHoursPerWeek {
+    pub fn default() -> Self {
+        Self {
+            monday: Some(ActiveHours {
+                start: NaiveTime::from_hms_opt(9, 0, 0).unwrap(),
+                end: NaiveTime::from_hms_opt(18, 0, 0).unwrap(),
+            }),
+            tuesday: Some(crate::types::ActiveHours {
+                start: NaiveTime::from_hms_opt(8, 0, 0).unwrap(),
+                end: NaiveTime::from_hms_opt(18, 0, 0).unwrap(),
+            }),
+            wednesday: Some(crate::types::ActiveHours {
+                start: NaiveTime::from_hms_opt(8, 0, 0).unwrap(),
+                end: NaiveTime::from_hms_opt(17, 0, 0).unwrap(),
+            }),
+            thursday: Some(crate::types::ActiveHours {
+                start: NaiveTime::from_hms_opt(8, 0, 0).unwrap(),
+                end: NaiveTime::from_hms_opt(18, 0, 0).unwrap(),
+            }),
+            friday: Some(crate::types::ActiveHours {
+                start: NaiveTime::from_hms_opt(10, 0, 0).unwrap(),
+                end: NaiveTime::from_hms_opt(16, 0, 0).unwrap(),
+            }),
+            saturday: None,
+            sunday: None,
+        }
+    }
+}
+
+#[derive(Debug, serde::Deserialize, Hash)]
+#[serde(rename_all = "lowercase")]
+pub enum DayOfWeek {
+    Sunday,
+    Monday,
+    Tuesday,
+    Wednesday,
+    Thursday,
+    Friday,
+    Saturday,
 }
 
 #[derive(Debug, Clone, PartialEq, Eq)]
