# api/src/types/app_state.rs
@@ -12,6 +12,7 @@ pub struct AppState {
     pub(crate) id_provider: Arc<IdProvider>,
     pub(crate) use_cases: types::use_cases::UseCases,
     pub(crate) date_time_switch: Arc<DateTimeSwitch>,
+    pub(crate) active_hours_per_week: types::ActiveHoursPerWeek,
 }
 impl AppState {
     pub(crate) fn new(
@@ -26,6 +27,7 @@ impl AppState {
             id_provider,
             use_cases: types::use_cases::UseCases::new(),
             date_time_switch,
+            active_hours_per_week: types::ActiveHoursPerWeek::default(),
         }
     }
 }
