# api/src/use_cases/get_config/route.rs
@@ -9,7 +9,7 @@ pub async fn handler(State(app_state): State<AppState>) -> impl IntoResponse {
     match app_state
         .use_cases
         .get_config
-        .execute(app_state.clock.as_ref())
+        .execute(app_state.clock.as_ref(), app_state.active_hours_per_week)
         .await
     {
         Ok(config) => Json(config).into_response(),
